# NodePy

./: README.md  pyproject.toml
client/: package-lock.json  package.json  vite.config.ts
client/public/guides/: 1_quick_start.md  2_core_concept.md  3_common_data_flow.md  4_logical_control_and_automation.md  5_machine_learning.md
client/src/: App.vue
client/src/components/: AdminAccountInfo.vue  ControlBar.vue  Modal.vue  NodePyConnectionLine.vue  NodePyEdge.vue  Tag.vue  TagSelectionModal.vue
client/src/router/: index.ts
client/src/stores/: adminLoginStore.ts  adminStore.ts  fileStore.ts  graphStore.ts  projectStore.ts  resultStore.ts  tableStore.ts
client/src/types/: nodeTypes.ts  tag.ts
client/src/utils/: AdminAuthHelper.ts  AdminAuthenticatedServiceDecorator.ts  AdminAuthenticatedServiceFactory.ts  network.ts  task.ts
client/src/views/: Admin.vue  AdminLogin.vue  Explore.vue  Home.vue  Visitor.vue
docs/: TODO.md  nodes.md
infra/: docker-compose.yml
infra/docker/: server.Dockerfile  worker.Dockerfile
migrations/: env.py
server/: celery.py  config.py  main.py
server/api/: __init__.py  admin.py  data.py  explore.py  files.py  playground.py  project.py  tag.py  tutorial.py
server/api/admin/: __init__.py  auth.py  financial.py  health.py  project.py  (+3 more)
server/interpreter/: control_structure.py  interpreter.py
server/lib/: AuthUtils.py  ExampleProjManager.py  FileManager.py  default_user.py
server/models/: data.py  database.py  explore_list.py  project.py  project_list.py  types.py
tests/: conftest.py  test_file_and_cache_manager.py  test_file_and_cache_manager_use_fixture.py  test_utils.py
(+142 files in other folders)
