[project]
name = "nodepy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13.0, <3.14.0"
dependencies = [
    "networkx>=3.5",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "requests>=2.32.5",
    "pandas>=2.3.3",
    "numpy>=2.3.3",
    "celery>=5.5.3",
    "redis>=6.4.0",
    "minio>=7.2.18",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "openpyxl>=3.1.5",
    "joblib>=1.5.2",
    "scikit-learn>=1.7.2",
    "taskipy>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "stats-code>=0.1.5",
]
server = [
    "fastapi[standard]>=0.118.3",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "passlib[argon2]>=1.7.4",
    "email-validator>=2.3.0",
    "argon2-cffi>=21.3.0",
    "python-multipart>=0.0.20",
]
worker = [
    "matplotlib>=3.10.7",
    "restrictedpython>=8.1",
    "wordcloud>=1.9.4",
    "python-docx>=1.2.0",
    "seaborn>=0.13.2",
    "jieba>=0.42.1",
    "httpx>=0.28.1",
    "yfinance>=0.2.66",
    "mplfinance>=0.12.10b0",
    "snownlp>=0.12.3",
    "vadersentiment>=3.3.2",
    "pymupdf>=1.26.7",
]

[tool.taskipy.tasks]
build = "python scripts/build.py build"
dev = "python scripts/build.py dev"
prod = "python scripts/build.py prod"
persist = "PYTHONPATH=. python scripts/persist_project.py"
check = "ruff check"

[tool.ruff]
line-length = 120
target-version = "py313"
include = ["server/**/*.py"]
exclude = [
    "_*.py",
]
